unpackaged/main/default/objects/litify_pm__Default_Matter_Team_Member__c/litify_pm__Default_Matter_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Default Matter Team Member</label>
    <nameField>
        <label>Default Matter Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default Matter Team Member</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>