unpackaged/main/default/objects/litify_pm__Default_Matter_Team_Member__c/fields/litify_pm__Billable_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Billable_Hourly_Rate__c</fullName>
    <label>Billable Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>