unpackaged/main/default/objects/litify_pm__Default_Matter_Team_Member__c/fields/litify_pm__Default_Matter_Team__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Default_Matter_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Matter Team</label>
    <referenceTo>litify_pm__Default_Matter_Team__c</referenceTo>
    <relationshipLabel>Default Matter Team Member</relationshipLabel>
    <relationshipName>Default_Matter_Team_Member</relationshipName>
    <type>Lookup</type>
</CustomField>