unpackaged/main/default/objects/litify_pm__Default_Matter_Team_Member__c/fields/litify_pm__Role__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>litify_pm__Matter_Team_Role__c</referenceTo>
    <relationshipLabel>Default Matter Team Member</relationshipLabel>
    <relationshipName>Default_Matter_Team_Member</relationshipName>
    <type>Lookup</type>
</CustomField>