unpackaged/main/default/objects/litify_pm__Default_Matter_Team_Member__c/fields/litify_pm__User__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Default_Matter_Team_Member</relationshipName>
    <type>Lookup</type>
</CustomField>